<resources>
    <string name="Title">Obtain the Milk</string>
    <string name="Description">Welcome to Obtain the Milk the game. This is a simplistic desision based game where you
        must choice you path.
    </string>
    <string name="sButton">Start</string>
    <string name="oButton">Objective</string>
    <string name="Objective">Your objective is to make the correct decisions to allow you to obtain some milk or enough money to buy some from one of your roommates.</string>
    <string name="ObjectiveSecond">Can you Obtain the milk? Lets find out.</string>

    <string name="bButton">Back</string>

    <string name="app_name">ObtainMilk</string>
    <string name="pre_description">You wake up</string>
    <string name="post_question">Do you sleep in?</string>
    <string name="yButton">Yes</string>
    <string name="nButton">No</string>
    <string name="mButton">Maybe</string>
    <string name="GoBackprompt">Go backs:</string>
    <string name="lButton">Load</string>


</resources>