<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Interactivity"
        android:background="@drawable/ic_interaction_screen">

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@drawable/ic_iconmilk" android:id="@+id/imageView2"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.469" app:layout_constraintVertical_bias="0.017"
            android:scaleX=".75" android:scaleY=".75"/>
    <TextView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:id="@+id/TextQuestion"
            android:layout_marginBottom="305dp" android:text="@string/post_question"
            app:layout_constraintVertical_bias="0.0" android:layout_marginTop="319dp"
            android:layout_marginRight="45dp" android:layout_marginLeft="45dp" android:gravity="center_horizontal"
            app:layout_constraintHorizontal_bias="0.48"/>
    <Button
            android:text="@string/bButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/button5"
            app:backgroundTint="#673AB7" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:onClick="BackClickHandler"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.941"
            android:layout_marginEnd="10dp" android:layout_marginRight="10dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="155dp"
            android:layout_marginStart="155dp" app:layout_constraintHorizontal_bias="0.962"/>
    <Button
            android:text="@string/nButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/button3"
            app:backgroundTint="#EF233C" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:onClick="noClickHandler"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.644"
            app:layout_constraintStart_toEndOf="@+id/button" app:layout_constraintHorizontal_bias="0.148"
            android:layout_marginLeft="10dp" android:layout_marginStart="10dp"/>
    <Button
            android:text="@string/yButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/button"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:onClick="yesClickHandler" app:backgroundTint="#0BCE83" app:layout_constraintHorizontal_bias="0.083"
            app:layout_constraintVertical_bias="0.644" android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"/>
    <Button
            android:text="@string/mButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/button2"
            app:backgroundTint="#F5ED00" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:onClick="MaybeClickHandler"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.644"
            app:layout_constraintStart_toEndOf="@+id/button3" app:layout_constraintHorizontal_bias="0.507"
            android:layout_marginLeft="10dp" android:layout_marginStart="10dp"/>
    <TextView
            android:text="@string/pre_description"
            android:layout_width="0dp"
            android:layout_height="0dp" android:id="@+id/TextDescription"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="435dp"
            app:layout_constraintVertical_bias="0.0" android:layout_marginLeft="45dp"
            android:layout_marginStart="45dp" android:layout_marginRight="45dp" android:layout_marginEnd="45dp"
            android:layout_marginTop="190dp" app:layout_constraintHorizontal_bias="0.483"
            android:gravity="center_horizontal"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textGoBackCount"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="1.0"
            android:layout_marginTop="255dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.985" android:layout_marginBottom="10dp"
            android:layout_marginRight="25dp" android:layout_marginEnd="25dp"/>
    <TextView
            android:text="@string/GoBackprompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView3"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="307dp"
            android:layout_marginStart="307dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginEnd="65dp"
            android:layout_marginRight="65dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintVertical_bias="1.0" android:layout_marginBottom="10dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>